# robotix

./: .gitignore  Makefile  README.md
client/: .env.example  README.md  next.config.ts  package-lock.json  package.json
client/api/client/: index.ts
client/api/http/: index.ts
client/api/robot/: loader.ts
client/app/: layout.tsx  page.tsx
client/app/api/client/: index.ts
client/app/api/robot/: fetch.ts
client/app/components/: CraneVisualization.tsx  Gripper.tsx  Joint.tsx  Robot.tsx  RobotCrane.tsx  TrussArm.tsx  TrussColumn.tsx
client/app/hooks/: useCraneState.ts
client/app/robots/: page.tsx
client/app/robots/[id]/: page.tsx
client/components/controls/: CoordinateInput.tsx  CraneControls.tsx
client/components/feedback/: Alert.tsx
client/components/robot/: Base.tsx  Grid.tsx  Gripper.tsx  Joint.tsx  RobotCrane.tsx  TrussArm.tsx  TrussColumn.tsx
client/components/scene/: RobotCraneScene.tsx
client/hooks/: useCraneState.ts
client/state/robot/: actions.ts  useCraneState.ts  useSocket.ts
client/types/: crane.ts
client/utils/: lerp.ts
server/: .env.example  Cargo.toml  crane.urdf
server/config/: robot-1.toml  robot-2.toml  robot-3.toml
server/src/: config.rs  lib.rs  main.rs  telemetry.rs
server/src/handler/: errors.rs  health_check.rs  middleware.rs  mod.rs  robot_crane.rs
server/src/robot/: crane.rs  message.rs  mod.rs  models.rs  registry.rs  scratch.txt  user.rs
server/src/storage/: mod.rs
