[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "web server that powers robotix"

[dependencies]
actix = "0.13.5"
actix-web = "4.10.2"
actix-web-actors = "4.3.1"
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env"]}
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
actix-cors = "0.7.1"
dashmap = "6.1.0"
thiserror = "2.0.12"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
toml = "0.8"
